[gd_scene load_steps=8 format=3 uid="uid://dwv7b0tywf81k"]

[ext_resource type="Script" path="res://src/scripts/game.gd" id="1_jeici"]
[ext_resource type="FontFile" uid="uid://blr1av5cpkt1f" path="res://src/assets/fonts/static/Oswald-Bold.ttf" id="3_0xmu0"]
[ext_resource type="Script" path="res://src/scripts/hud.gd" id="3_avc74"]
[ext_resource type="Texture2D" uid="uid://76qty0xkqhuq" path="res://src/assets/sunset.png" id="3_kaqjp"]

[sub_resource type="Animation" id="Animation_hy4uv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_veod2"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6rph1"]
_data = {
"RESET": SubResource("Animation_hy4uv"),
"fade": SubResource("Animation_veod2")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_jeici")

[node name="Level" type="Node2D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/scenes/lobby.tscn", "res://src/scenes/round.tscn", "res://src/scenes/scoreboard.tscn", "res://src/scenes/winning_screen.tscn")
spawn_path = NodePath("../Level")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 159.0
offset_top = 87.0
offset_right = 159.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_avc74")

[node name="Sunset" type="Sprite2D" parent="UI"]
position = Vector2(1, 3)
texture = ExtResource("3_kaqjp")

[node name="TextEdit" type="LineEdit" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -29.0
offset_right = 42.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0xmu0")
theme_override_font_sizes/font_size = 10
placeholder_text = "Enter Name"
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
metadata/_edit_use_anchors_ = true

[node name="Host" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 7.0
offset_right = 16.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0xmu0")
theme_override_font_sizes/font_size = 10
text = "Host"
metadata/_edit_use_anchors_ = true

[node name="Join" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = 41.0
offset_right = 14.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0xmu0")
theme_override_font_sizes/font_size = 10
text = "Join"
metadata/_edit_use_anchors_ = true

[node name="Transition" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="Transition"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Transition/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6rph1")
}

[connection signal="text_submitted" from="UI/TextEdit" to="." method="_on_text_edit_text_submitted"]
[connection signal="text_submitted" from="UI/TextEdit" to="UI" method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="UI/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Join" to="." method="_on_join_pressed"]
